# Reclass.NET-MCP

./: .gitignore  .mcp.json  README.md  pyproject.toml
examples/: claude_code_settings.json
plugin/: ReclassMcpBridge.sln
plugin/ReclassMcpBridge/: BridgePlugin.cs  HttpBridgeServer.cs  ReclassMcpBridge.csproj
plugin/ReclassMcpBridge/Controllers/: AnalysisController.cs  ClassController.cs  Il2CppController.cs  MemoryController.cs  ProcessController.cs
plugin/ReclassMcpBridge/Models/: ClassDefinition.cs  MemoryRequest.cs
plugin/ReclassMcpBridge/Properties/: AssemblyInfo.cs
src/reclass_mcp/: __init__.py  __main__.py  bridge.py  server.py  types.py
